--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.3",
     "gatsby": "^4.9.0",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-preact": "^6.9.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-sass": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-plugin-sitemap": "^5.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
