--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.3",
+    "axios": "^0.26.0",
     "gatsby": "^4.9.0",
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.9.0",
@@ -38,6 +39,7 @@
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
     "typescript": "^4.5.5"
   }
 }
